# finmars-community-edition

./: .env.sample  .gitignore  Makefile  README.md  bootstrap.Dockerfile  docker-compose.dev.bak.yml  docker-compose.dev.yml  docker-compose.yml  generate-env.sh  init-setup.py  init-setup.service  migrate.sh  openssl.conf  pyproject.toml  quick-install.sh  rabbitmq.conf  requirements.txt  update-versions.sh
.github/workflows/: main.yml
community_edition/: app.py  main.py  routers.py
community_edition/routers/: authentication.py  configurate.py
community_edition/services/: authentication.py  backup.py  container.py  env.py  keycloak.py  logs.py  setup.py  versions.py
community_edition/templates/: add_keycloak_user.html  backup.html  base.html  form.html  login.html  logs.html  status.html  success.html  versions.html
db/init/: 10-create-dbs-and-schemas.sh
keycloak/config/: keycloak.conf
keycloak/config/http/: keycloak.conf
keycloak/data/: finmars-realm.json
nginx/conf/: auth-domain.conf.template  main-domain.conf.template
nginx/conf/http/: main-domain.conf.template
nginx/conf/https/: auth-domain.conf.template  main-domain.conf.template
scripts/: add-keycloak-user.sh  clean.sh  common_functions.sh  create-dumps.sh  download-storage.sh  export-sql.sh  generate-env.sh  import-sql.sh  init-cert.sh  init-keycloak.sh  install-demo.sh  install.sh  list-keycloak-users.sh  migrate.sh  patch-demo-database.sh  restore-backup.sh  setup-ui.sh  update-versions.sh
tests/: conftest.py
tests/community_edition/routers/: test_authentication.py  test_configurate.py
(+3 files in other folders)
